Don't stop text-decoration-propagation in general for UA shadows

https://bugs.webkit.org/show_bug.cgi?id=227282
rdar://problem/79955601

Reviewed by Antti Koivisto.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

Merge: https://chromium.googlesource.com/chromium/src.git/+/2c40398185c628f0f858f1838c879f9b81c8d3e7

We used to stop propagation of text-decoration into elements rendered
with UA shadow trees in general. Instead we should list the specific
cases where we need to do this. This is currently for media elements
which has a special rendering where the media controls do not use a
proper containing block model.

This fixes text-decoration propagation for elements like, summary,
details etc.

* Source/WebCore/style/StyleAdjuster.cpp:
(shouldInheritTextDecorationsInEffect): Rename 'isAtUserAgentShadowBoundary' to
'isAtMediaUAShadowBoundary' and add specific as per commit message
* LayoutTests/TestExpectations: Remove failing WPT Test case of text-decoration for summary element
* LayoutTests/platform/gtk/TestExpectations: Add Platform specific 'ImageOnly Failure' expectation

Canonical link: https://commits.webkit.org/264901@main